--- a/Watson/Watson.csproj
+++ b/Watson/Watson.csproj
@@ -41,10 +41,10 @@
   <ItemGroup>
     <Compile Include="Configuration\FluentCategoryConfigurator.cs" />
     <Compile Include="Configuration\FluentConfigurator.cs" />
-    <Compile Include="PerformanceCounterMetadata.cs" />
+    <Compile Include="Internal\PerformanceCounterMetadata.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Separator.cs" />
-    <Compile Include="StringExtensions.cs" />
+    <Compile Include="Internal\Separator.cs" />
+    <Compile Include="BCL\StringExtensions.cs" />
     <Compile Include="WatsonManager.cs" />
   </ItemGroup>
   <ItemGroup>
